--- a/adjectivedeclensions.html
+++ b/adjectivedeclensions.html
@@ -1,10 +1,10 @@
-<title>Omnia Latin</title>
+﻿<title>Omnia Latin</title>
 <h1 style="text-align: center;">Adjective Declensions</h1>
 
 <meta charset="UTF-8">
     <!-- Toggle Button -->
 
-<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">☰ Menu</button>
+<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">â˜° Menu</button>
 
 
     <!-- Sidebar -->
@@ -78,15 +78,15 @@
       </tr>
       <tr>
         <td>Genitive</td>
-        <td>bonī</td><td>bonae</td><td>bonī</td>
+        <td>bonÄ«</td><td>bonae</td><td>bonÄ«</td>
         <td>tristis</td><td>tristis</td>
         <td>ingentis</td><td>ingentis</td>
       </tr>
       <tr>
         <td>Dative</td>
-        <td>bonō</td><td>bonae</td><td>bonō</td>
-        <td>tristī</td><td>tristī</td>
-        <td>ingentī</td><td>ingentī</td>
+        <td>bonÅ</td><td>bonae</td><td>bonÅ</td>
+        <td>tristÄ«</td><td>tristÄ«</td>
+        <td>ingentÄ«</td><td>ingentÄ«</td>
       </tr>
       <tr>
         <td>Accusative</td>
@@ -96,40 +96,40 @@
       </tr>
       <tr>
         <td>Ablative</td>
-        <td>bonō</td><td>bonā</td><td>bonō</td>
-        <td>tristī</td><td>tristī</td>
-        <td>ingentī</td><td>ingentī</td>
+        <td>bonÅ</td><td>bonÄ</td><td>bonÅ</td>
+        <td>tristÄ«</td><td>tristÄ«</td>
+        <td>ingentÄ«</td><td>ingentÄ«</td>
       </tr>
   
       <!-- PLURAL -->
       <tr><td colspan="8" style="text-align:center;"><b>PLURAL</b></td></tr>
       <tr>
         <td>Nominative</td>
-        <td>bonī</td><td>bonae</td><td>bona</td>
-        <td>tristēs</td><td>tristia</td>
-        <td>ingentēs</td><td>ingentia</td>
+        <td>bonÄ«</td><td>bonae</td><td>bona</td>
+        <td>tristÄ“s</td><td>tristia</td>
+        <td>ingentÄ“s</td><td>ingentia</td>
       </tr>
       <tr>
         <td>Genitive</td>
-        <td>bonōrum</td><td>bonārum</td><td>bonōrum</td>
+        <td>bonÅrum</td><td>bonÄrum</td><td>bonÅrum</td>
         <td>tristium</td><td>tristium</td>
         <td>ingentium</td><td>ingentium</td>
       </tr>
       <tr>
         <td>Dative</td>
-        <td>bonīs</td><td>bonīs</td><td>bonīs</td>
+        <td>bonÄ«s</td><td>bonÄ«s</td><td>bonÄ«s</td>
         <td>tristibus</td><td>tristibus</td>
         <td>ingentibus</td><td>ingentibus</td>
       </tr>
       <tr>
         <td>Accusative</td>
-        <td>bonōs</td><td>bonās</td><td>bona</td>
-        <td>tristēs</td><td>tristia</td>
-        <td>ingentēs</td><td>ingentia</td>
+        <td>bonÅs</td><td>bonÄs</td><td>bona</td>
+        <td>tristÄ“s</td><td>tristia</td>
+        <td>ingentÄ“s</td><td>ingentia</td>
       </tr>
       <tr>
         <td>Ablative</td>
-        <td>bonīs</td><td>bonīs</td><td>bonīs</td>
+        <td>bonÄ«s</td><td>bonÄ«s</td><td>bonÄ«s</td>
         <td>tristibus</td><td>tristibus</td>
         <td>ingentibus</td><td>ingentibus</td>
       </tr>
