--- a/art.html
+++ b/art.html
@@ -1,10 +1,10 @@
-<title>Omnia Latin</title>
+﻿<title>Omnia Latin</title>
 <h1 style="text-align: center;">Ancient Art</h1>
 
 <meta charset="UTF-8">
     <!-- Toggle Button -->
 
-<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">☰ Menu</button>
+<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">â˜° Menu</button>
 
 
     <!-- Sidebar -->
