--- a/demonstratives.html
+++ b/demonstratives.html
@@ -1,10 +1,10 @@
-<title>Omnia Latin</title>
+﻿<title>Omnia Latin</title>
 <h1 style="text-align: center;">Demonstratives</h1>
 
 <meta charset="UTF-8">
     <!-- Toggle Button -->
 
-<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">☰ Menu</button>
+<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">â˜° Menu</button>
 
 
     <!-- Sidebar -->
@@ -53,6 +53,14 @@
       margin-bottom: 10px;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VKB1GF6QVZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-VKB1GF6QVZ', { 'anonymize_ip': true });
+  </script>
 </head>
 <body>
 
@@ -72,7 +80,7 @@
     <tr><td>Genitive</td><td colspan="3">huius</td></tr>
     <tr><td>Dative</td><td colspan="3">huic</td></tr>
     <tr><td>Accusative</td><td>hunc</td><td>hanc</td><td>hoc</td></tr>
-    <tr><td>Ablative</td><td>hōc</td><td>hāc</td><td>hōc</td></tr>
+    <tr><td>Ablative</td><td>hÅc</td><td>hÄc</td><td>hÅc</td></tr>
   </tbody>
 </table>
 
@@ -89,9 +97,9 @@
   <tbody>
     <tr><td>Nominative</td><td>ille</td><td>illa</td><td>illud</td></tr>
     <tr><td>Genitive</td><td colspan="3">illius</td></tr>
-    <tr><td>Dative</td><td colspan="3">illī</td></tr>
+    <tr><td>Dative</td><td colspan="3">illÄ«</td></tr>
     <tr><td>Accusative</td><td>illum</td><td>illam</td><td>illud</td></tr>
-    <tr><td>Ablative</td><td>illō</td><td>illā</td><td>illō</td></tr>
+    <tr><td>Ablative</td><td>illÅ</td><td>illÄ</td><td>illÅ</td></tr>
   </tbody>
 </table>
 
@@ -107,11 +115,11 @@
     </tr>
   </thead>
   <tbody>
-    <tr><td>Nominative</td><td>hī</td><td>hae</td><td>haec</td></tr>
-    <tr><td>Genitive</td><td>hōrum</td><td>hārum</td><td>hōrum</td></tr>
-    <tr><td>Dative</td><td colspan="3">hīs</td></tr>
-    <tr><td>Accusative</td><td>hōs</td><td>hās</td><td>haec</td></tr>
-    <tr><td>Ablative</td><td colspan="3">hīs</td></tr>
+    <tr><td>Nominative</td><td>hÄ«</td><td>hae</td><td>haec</td></tr>
+    <tr><td>Genitive</td><td>hÅrum</td><td>hÄrum</td><td>hÅrum</td></tr>
+    <tr><td>Dative</td><td colspan="3">hÄ«s</td></tr>
+    <tr><td>Accusative</td><td>hÅs</td><td>hÄs</td><td>haec</td></tr>
+    <tr><td>Ablative</td><td colspan="3">hÄ«s</td></tr>
   </tbody>
 </table>
 
@@ -126,11 +134,11 @@
     </tr>
   </thead>
   <tbody>
-    <tr><td>Nominative</td><td>illī</td><td>illae</td><td>illa</td></tr>
-    <tr><td>Genitive</td><td>illōrum</td><td>illārum</td><td>illōrum</td></tr>
-    <tr><td>Dative</td><td colspan="3">illīs</td></tr>
-    <tr><td>Accusative</td><td>illōs</td><td>illās</td><td>illa</td></tr>
-    <tr><td>Ablative</td><td colspan="3">illīs</td></tr>
+    <tr><td>Nominative</td><td>illÄ«</td><td>illae</td><td>illa</td></tr>
+    <tr><td>Genitive</td><td>illÅrum</td><td>illÄrum</td><td>illÅrum</td></tr>
+    <tr><td>Dative</td><td colspan="3">illÄ«s</td></tr>
+    <tr><td>Accusative</td><td>illÅs</td><td>illÄs</td><td>illa</td></tr>
+    <tr><td>Ablative</td><td colspan="3">illÄ«s</td></tr>
   </tbody>
 </table>
 
