--- a/firstdeclension.html
+++ b/firstdeclension.html
@@ -1,11 +1,11 @@
-<title>Omnia Latin</title>
+﻿<title>Omnia Latin</title>
 <h1 style="text-align: center;">First Declension</h1>
 
 
 <meta charset="UTF-8">
     <!-- Toggle Button -->
 
-<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">☰ Menu</button>
+<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">â˜° Menu</button>
 
 
     <!-- Sidebar -->
@@ -65,25 +65,25 @@
 <tr>
     <td>Genetive</td>
     <td>ae</td>
-    <td>ārum</td>
+    <td>Ärum</td>
 
 </tr>
 <tr>
     <td>Dative</td>
     <td>ae</td>
-    <td>īs</td>
+    <td>Ä«s</td>
 
 </tr>
 <tr>
     <td>Accusative</td>
     <td>am</td>
-    <td>ās</td>
+    <td>Äs</td>
 
 </tr>
 <tr>
     <td>Ablative</td>
-    <td>ā</td>
-    <td>īs</td>
+    <td>Ä</td>
+    <td>Ä«s</td>
 
 </tr>
 </table>
