--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<title>Omnia Latin</title>
+﻿<title>Omnia Latin</title>
 <div style="background-color: #333; color: white; text-align: center; padding: 20px; margin-bottom: 20px; position: absolute; top: 0; left: 0; right: 0;">
     <h1 style="margin: 0; font-size: 100px;">Omnia Latin</h1>
 </div>
