--- a/infinitiveuses.html
+++ b/infinitiveuses.html
@@ -1,11 +1,11 @@
-<title>Omnia Latin</title>
+﻿<title>Omnia Latin</title>
 <h1 style="text-align: center;">Uses of Infinitives</h1>
 
 
 <meta charset="UTF-8">
     <!-- Toggle Button -->
 
-<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">☰ Menu</button>
+<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">â˜° Menu</button>
 
 
     <!-- Sidebar -->
@@ -64,12 +64,12 @@
 </tr>
 <tr>
     <td>Subject</td>
-    <td><u>amāre</u> est humanum</td>
+    <td><u>amÄre</u> est humanum</td>
 
 </tr>
 <tr>
     <td>Indirect Statement</td>
-    <td>Puella dīcit puerum <u>venīre</u></td>
+    <td>Puella dÄ«cit puerum <u>venÄ«re</u></td>
 
 </tr>
 </table>
