--- a/p.p.help.html
+++ b/p.p.help.html
@@ -1,4 +1,4 @@
-<div style="background-color: #333; color: white; text-align: center; padding: 20px; margin-bottom: 20px; position: relative;">
+﻿<div style="background-color: #333; color: white; text-align: center; padding: 20px; margin-bottom: 20px; position: relative;">
     <h1 style="margin: 0;">4th Principal Part Extra Information</h1>
     <button onclick="location.href='principal_parts.html'" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 20px; font-size: 20px; position: absolute;">Exit</button>
 </div>
@@ -36,11 +36,11 @@
     </thead>
     <tbody>
       <tr>
-        <td>dux, ab hoste vulnerātus, ad urbem revēnit</td>
+        <td>dux, ab hoste vulnerÄtus, ad urbem revÄ“nit</td>
         <td>the leader, [having been] wounded by the enemy, returned to the city</td>
       </tr>
       <tr>
-        <td>dux, gladiō vulnerātus, ad urbem revēnit</td>
+        <td>dux, gladiÅ vulnerÄtus, ad urbem revÄ“nit</td>
         <td>The leader, [having been] wounded by the sword, returned to the city</td>
       </tr>
     </tbody>
