--- a/principal_parts.html
+++ b/principal_parts.html
@@ -1,10 +1,10 @@
-<title>Omnia Latin</title>
+﻿<title>Omnia Latin</title>
 <h1 style="text-align: center;">Principal Parts</h1>
 
 <meta charset="UTF-8">
     <!-- Toggle Button -->
 
-<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">☰ Menu</button>
+<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">â˜° Menu</button>
 
 
     <!-- Sidebar -->
@@ -68,38 +68,38 @@
   <tbody>
     <tr>
       <td>1st Conjugation</td>
-      <td>ō</td>
-      <td>āre</td>
-      <td>āvī</td>
+      <td>Å</td>
+      <td>Äre</td>
+      <td>ÄvÄ«</td>
       <td>tus/ta/tum</td>
     </tr>
     <tr>
       <td>2nd Conjugation</td>
-      <td>ō</td>
-      <td>ēre</td>
-      <td>uī <br><small>*often varies</small></td>
+      <td>Å</td>
+      <td>Ä“re</td>
+      <td>uÄ« <br><small>*often varies</small></td>
       <td>tus/ta/tum</td>
     </tr>
     <tr>
       <td>3rd Conjugation</td>
-      <td>ō</td>
+      <td>Å</td>
       <td>ere</td>
-      <td>ī <br><small>*often varies</small></td>
+      <td>Ä« <br><small>*often varies</small></td>
       <td>tus/ta/tum</td>
     </tr>
     <tr>
       <td>4th Conjugation</td>
-      <td>ō</td>
-      <td>īre</td>
-      <td>īvī</td>
+      <td>Å</td>
+      <td>Ä«re</td>
+      <td>Ä«vÄ«</td>
       <td>tus/ta/tum</td>
     </tr>
     <tr>
         <td>Examples</td>
-        <td>amō: I love</td>
-        <td>amāre: to love</td>
-        <td>amāvī: I loved</td>
-        <td>amātus: loved/having been loved/ was loved <br> <button onclick="location.href='p.p.help.html'">
+        <td>amÅ: I love</td>
+        <td>amÄre: to love</td>
+        <td>amÄvÄ«: I loved</td>
+        <td>amÄtus: loved/having been loved/ was loved <br> <button onclick="location.href='p.p.help.html'">
             <small><i>i</i></small></small></button></td>
     </tr>
   </tbody>
