--- a/seconddeclension.html
+++ b/seconddeclension.html
@@ -1,11 +1,11 @@
-<title>Omnia Latin</title>
+﻿<title>Omnia Latin</title>
 <h1 style="text-align: center;">Second Declension<h1>
 
 
 <meta charset="UTF-8">
     <!-- Toggle Button -->
 
-<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">☰ Menu</button>
+<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">â˜° Menu</button>
 
 
     <!-- Sidebar -->
@@ -70,7 +70,7 @@
 <tr>
     <td>Nominative</td>
     <td>us</td>
-    <td>ī</td>
+    <td>Ä«</td>
     <th> </th>
     <td>um</td>
     <td>a</td>
@@ -78,26 +78,26 @@
 </tr>
 <tr>
     <td>Genetive</td>
-    <td>ī</td>
-    <td>ōrum</td>
+    <td>Ä«</td>
+    <td>Årum</td>
     <th> </th>
-    <td>ī</td>
-    <td>ōrum</td>
+    <td>Ä«</td>
+    <td>Årum</td>
 
 </tr>
 <tr>
     <td>Dative</td>
-    <td>ō</td>
-    <td>īs</td>
+    <td>Å</td>
+    <td>Ä«s</td>
     <th> </th>
-    <td>ō</td>
-    <td>īs</td>
+    <td>Å</td>
+    <td>Ä«s</td>
 
 </tr>
 <tr>
     <td>Accusative</td>
     <td>um</td>
-    <td>ōs</td>
+    <td>Ås</td>
     <th> </th>
     <td>um</td>
     <td>a</td>
@@ -105,11 +105,11 @@
 </tr>
 <tr>
     <td>Ablative</td>
-    <td>ō</td>
-    <td>īs</td>
+    <td>Å</td>
+    <td>Ä«s</td>
     <th> </th>
-    <td>ō</td>
-    <td>īs</td>
+    <td>Å</td>
+    <td>Ä«s</td>
 
 </tr>
 </table>
