--- a/suburanivocab.html
+++ b/suburanivocab.html
@@ -1,11 +1,11 @@
-<title>Omnia Latin</title>
+﻿<title>Omnia Latin</title>
 <h1 style="text-align: center;">Suburani Vocab</h1>
 
 
 <meta charset="UTF-8">
     <!-- Toggle Button -->
 
-<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">☰ Menu</button>
+<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">â˜° Menu</button>
 
 
     <!-- Sidebar -->
@@ -82,20 +82,20 @@
 
   <div id="chapter1">
   <meta charset="UTF-8">
-<div onclick="flip(this)">dormiō<br><small style='display:none'>I sleep</small></div>
+<div onclick="flip(this)">dormiÅ<br><small style='display:none'>I sleep</small></div>
 <div onclick="flip(this)">ego<br><small style='display:none'>I</small></div>
-<div onclick="flip(this)">frāter<br><small style='display:none'>brother</small></div>
-<div onclick="flip(this)">hōra<br><small style='display:none'>hour</small></div>
+<div onclick="flip(this)">frÄter<br><small style='display:none'>brother</small></div>
+<div onclick="flip(this)">hÅra<br><small style='display:none'>hour</small></div>
 <div onclick="flip(this)">in<br><small style='display:none'>in, on</small></div>
-<div onclick="flip(this)">īnsula<br><small style='display:none'>apartment building</small></div>
-<div onclick="flip(this)">labōrō<br><small style='display:none'>I work</small></div>
-<div onclick="flip(this)">legō<br><small style='display:none'>I read</small></div>
+<div onclick="flip(this)">Ä«nsula<br><small style='display:none'>apartment building</small></div>
+<div onclick="flip(this)">labÅrÅ<br><small style='display:none'>I work</small></div>
+<div onclick="flip(this)">legÅ<br><small style='display:none'>I read</small></div>
 <div onclick="flip(this)">meus<br><small style='display:none'>my</small></div>
-<div onclick="flip(this)">nōn<br><small style='display:none'>not</small></div>
+<div onclick="flip(this)">nÅn<br><small style='display:none'>not</small></div>
 <div onclick="flip(this)">pater<br><small style='display:none'>father</small></div>
-<div onclick="flip(this)">rīdeō<br><small style='display:none'>I laugh, smile</small></div>
+<div onclick="flip(this)">rÄ«deÅ<br><small style='display:none'>I laugh, smile</small></div>
 <div onclick="flip(this)">servus<br><small style='display:none'>slave, enslaved person (male)</small></div>
-<div onclick="flip(this)">tū<br><small style='display:none'>you (singular)</small></div>
+<div onclick="flip(this)">tÅ«<br><small style='display:none'>you (singular)</small></div>
 <div onclick="flip(this)">turba<br><small style='display:none'>crowd</small></div>
 <div onclick="flip(this)">ubi?<br><small style='display:none'>where?</small></div>
 <div onclick="flip(this)">via<br><small style='display:none'>street, road, way</small></div>
