--- a/thirddeclension.html
+++ b/thirddeclension.html
@@ -1,11 +1,11 @@
-<title>Omnia Latin</title>
+﻿<title>Omnia Latin</title>
 <h1 style="text-align: center;">Third Declension</h1>
 
 
 <meta charset="UTF-8">
     <!-- Toggle Button -->
 
-<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">☰ Menu</button>
+<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">â˜° Menu</button>
 
 
     <!-- Sidebar -->
@@ -73,7 +73,7 @@
     <tr>
         <td>Nominative</td>
         <td>--</td>
-        <td>ēs</td>
+        <td>Ä“s</td>
         <th> </th>
         <td>--</td>
         <td>a</td>
@@ -90,17 +90,17 @@
     </tr>
     <tr>
         <td>Dative</td>
-        <td>ī</td>
+        <td>Ä«</td>
         <td>ibus</td>
         <th> </th>
-        <td>ī</td>
+        <td>Ä«</td>
         <td>ibus</td>
     
     </tr>
     <tr>
         <td>Accusative</td>
         <td>em</td>
-        <td>ēs</td>
+        <td>Ä“s</td>
         <th> </th>
         <td>--</td>
         <td>a</td>
