--- a/typesofadjectives.html
+++ b/typesofadjectives.html
@@ -1,11 +1,11 @@
-<title>Omnia Latin</title>
+﻿<title>Omnia Latin</title>
 <h1 style="text-align: center;">Types of Adjectives</h1>
 
 
 <meta charset="UTF-8">
     <!-- Toggle Button -->
 
-<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">☰ Menu</button>
+<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">â˜° Menu</button>
 
 
     <!-- Sidebar -->
@@ -70,14 +70,14 @@
         <td><b>pulcherrimus</b><br>most beautiful, very beautiful</td>
       </tr>
       <tr>
-        <td><b>trīstis</b><br>sad</td>
-        <td><b>trīstior</b><br>sadder</td>
-        <td><b>trīstissimus</b><br>saddest, very sad</td>
+        <td><b>trÄ«stis</b><br>sad</td>
+        <td><b>trÄ«stior</b><br>sadder</td>
+        <td><b>trÄ«stissimus</b><br>saddest, very sad</td>
       </tr>
       <tr>
-        <td><b>dīves</b><br>rich</td>
-        <td><b>dīvitior</b><br>richer</td>
-        <td><b>dīvitissimus</b><br>richest, very rich</td>
+        <td><b>dÄ«ves</b><br>rich</td>
+        <td><b>dÄ«vitior</b><br>richer</td>
+        <td><b>dÄ«vitissimus</b><br>richest, very rich</td>
       </tr>
       <tr>
         <td><b>facilis</b><br>easy</td>
