--- a/subjectpronouns.html
+++ b/subjectpronouns.html
@@ -1,11 +1,11 @@
-<title>Omnia Latin</title>
+﻿<title>Omnia Latin</title>
 <h1 style="text-align: center;">Subject Pronouns</h1>
 
 
 <meta charset="UTF-8">
     <!-- Toggle Button -->
 
-<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">☰ Menu</button>
+<button onclick="toggleSidebar()" style="background-color: #333; color: white; padding: 10px 15px; border: none; cursor: pointer; position: fixed; top: 10px; left: 10px;">â˜° Menu</button>
 
 
     <!-- Sidebar -->
@@ -54,6 +54,14 @@
       margin-bottom: 10px;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VKB1GF6QVZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-VKB1GF6QVZ', { 'anonymize_ip': true });
+  </script>
 </head>
 <body>
 
@@ -72,42 +80,42 @@
     <tr>
       <td>Nominative</td>
       <td>ego</td>
-      <td>nōs</td>
-      <td>tū</td>
-      <td>vōs</td>
-      <td>—</td>
+      <td>nÅs</td>
+      <td>tÅ«</td>
+      <td>vÅs</td>
+      <td>â€”</td>
     </tr>
     <tr>
       <td>Genitive</td>
-      <td>meī</td>
+      <td>meÄ«</td>
       <td>nostrum</td>
-      <td>tuī</td>
+      <td>tuÄ«</td>
       <td>vestrum</td>
-      <td>suī</td>
+      <td>suÄ«</td>
     </tr>
     <tr>
       <td>Dative</td>
       <td>mihi</td>
-      <td>nōbīs</td>
+      <td>nÅbÄ«s</td>
       <td>tibi</td>
-      <td>vōbīs</td>
+      <td>vÅbÄ«s</td>
       <td>sibi</td>
     </tr>
     <tr>
       <td>Accusative</td>
-      <td>mē</td>
-      <td>nōs</td>
-      <td>tē</td>
-      <td>vōs</td>
-      <td>sē</td>
+      <td>mÄ“</td>
+      <td>nÅs</td>
+      <td>tÄ“</td>
+      <td>vÅs</td>
+      <td>sÄ“</td>
     </tr>
     <tr>
       <td>Ablative</td>
-      <td>mē</td>
-      <td>nōbīs</td>
-      <td>tē</td>
-      <td>vōbīs</td>
-      <td>sē</td>
+      <td>mÄ“</td>
+      <td>nÅbÄ«s</td>
+      <td>tÄ“</td>
+      <td>vÅbÄ«s</td>
+      <td>sÄ“</td>
     </tr>
   </tbody>
 </table>
